--- a/css/bulma.css
+++ b/css/bulma.css
@@ -64,7 +64,7 @@ h1 {
   width: 200px; /* Set the width to a smaller size */
   margin-left: auto;
   margin-right: auto;
-  border-radius: 13px; /* Round the corners */
+  border-radius: 7px 22px 7px 22px;
 }
 
 /* Button color on hover */
